 + Construction Mode: Hide selected sub-modes from crate/object placer from enemies over the net
 + Continental supplies: Custom weapon icons for the special weapons
 + Racer, Tech Racer: First waypoint flashes before the hog starts moving
 + Racer: Use dark waypoints in bright themes like Bath
 + Racer, Tech Racer: Various other waypoint appearance improvements
 * Construction Mode: Remove drill strike if added by weapon scheme (it's broken)

A Space Adventure:
 + Precise Shooting: Display collected ammo
 + Hard Flying: Display personal best at mission start
 + Killing the Specialists: Add event messages and graphical effects
 * Killing the Specialists: Fix very misleading hints in mission panel
 * Killing the Specialists: Fix number of rounds measured being way too low

A Classic Fairytale:
 + Mission 3: Display number of turns left at timed parcours
 * Fix incorrect storytelling in mission descriptions

Theme customization:
 + Add fallback music with fallback-music and fallback-sd-music
 * Fix green color channel on themes with sd-tint

Lua API:
 + New call: WriteLnToChat(string): Add a line in the chat
 + New call: SetVampiric(bool): Toggle vampirism
 + New call: SetLaserSight(bool): Toggle laser sight
 + New call: GetWind(): Returns current wind (approximation) from -100 to 100
 + New call: GetTeamName(teamIdx): Returns name of team with given index (starts at 0)
 + New call: SpawnSupplyCrate(x, y, content, [, amount]): Spawn ammo or utility crate, depending on content
 + New call: HealHog(gearUid, healthBoost[, showMessage[, tint]]): Heal hedgehog with graphical effects and message
 + New callback: onEndTurn(): Called at the end of a turn (when gears have settled)
 * AddAmmo now automatically unselects weapon if it would remove current ammo from current hedgehog
 * Fix call: SetWeapon(amNothing) now unselects weapon
 * Fix global: TotalRounds was stuck at -1 for several turns

====================== 0.9.23 ======================
HIGHLIGHTS:
 + Battalion style