@@ -27,6 +27,9 @@ Styles and game modes:
  + Racer, Tech Racer: First waypoint flashes before the hog starts moving
  + Racer: Use dark waypoints in bright themes like Bath
  + Racer, Tech Racer: Various other waypoint appearance improvements
+ + Battalion: Minor message and visual improvements
+ + Battalion (King Mode): If the king dies, the hogs die normally instead of disappearing
+ * Battalion: Some texts in the mission panel were wrong and misleading
  * Construction Mode: Remove drill strike if added by weapon scheme (it's broken)
 
 A Space Adventure:
